--- a/site-tool/tool/src/webapp/vm/adminsites/chef_sites_edit.vm
+++ b/site-tool/tool/src/webapp/vm/adminsites/chef_sites_edit.vm
@@ -215,6 +215,12 @@
 						#if ($site.ModifiedTime) $validator.escapeHtml($site.ModifiedTime.toStringLocalFull()) #end
 					</td>
 				</tr>
+				<tr>
+					<th>$tlang.getString("sitedi.deletedon")</th>
+					<td>
+						#if ($site.SoftlyDeletedDate) $validator.escapeHtml($site.SoftlyDeletedDate.toStringLocalFull()) #end
+					</td>
+				</tr>
 			</table>
 			<h4>
 				$tlang.getString("sitedi.pro")
